Backfill aluno_responsavel in responsibles read model